fixed some issues in build pipeline